@@ -1,5 +1,15 @@
 2020-11-07  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* etc/poke-mode.el (poke-builtin-types): Remove "offset".
+	(poke-type-constructor-integral): New face.
+	(poke-type-constructor-offset): Likewise.
+	(poke-declaration-name): Likewise.
+	(poke-font-lock-keywords): Font-lock string literals, integral
+	constructors, offset constructors and the names of declared
+	entities.
+
+2020-11-07  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* etc/poke-mode.el (poke-smie-grammar): Indent chained
 	declarations for variables, types and units.
 
